[gd_scene load_steps=5 format=3 uid="uid://unhn550j2wd7"]

[ext_resource type="Script" path="res://src/level/hud/module_state/module_state.gd" id="1_j6xma"]
[ext_resource type="PackedScene" uid="uid://dcnmtanc5eohq" path="res://src/level/hud/integrity_bar/integrity_bar.tscn" id="2_8qebd"]
[ext_resource type="FontFile" uid="uid://c38jj7whpgm8m" path="res://src/font/pico-8.ttf" id="4_kd7qx"]

[sub_resource type="AnimatedTexture" id="AnimatedTexture_65dfg"]

[node name="ModuleState" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = -1
script = ExtResource("1_j6xma")

[node name="IntegrityBar" parent="." instance=ExtResource("2_8qebd")]
unique_name_in_owner = true
custom_minimum_size = Vector2(10, 3)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Border" type="ColorRect" parent="."]
custom_minimum_size = Vector2(16, 9)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
color = Color(0.372549, 0.341176, 0.309804, 1)

[node name="ColorRect" type="ColorRect" parent="Border"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 1.0
offset_right = -1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="Border/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_constants/separation = 1

[node name="ModuleSprite" type="TextureRect" parent="Border/ColorRect/HBoxContainer"]
custom_minimum_size = Vector2(8, 8)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture = SubResource("AnimatedTexture_65dfg")
stretch_mode = 2

[node name="ChargeLabel" type="Label" parent="Border/ColorRect/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("4_kd7qx")
theme_override_font_sizes/font_size = 6
text = "2"
vertical_alignment = 1
